# cheats

./: CHANGELOG.md  Cargo.toml  README.md  arch.drawio
.github/workflows/: rust.yml
resources/test/: example_script.txt  example_script_2.txt
src/: code.rs  io.rs  lib.rs  parser.rs
