[package]
name = "cheats"
description = "A game shell backend."
version = "0.4.0"
homepage = "https://erayerdin.hashnode.dev"
repository = "https://github.com/erayerdin/cheats"
license = "Apache-2.0"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2018"
keywords = ["gamedev", "game", "console", "shell", "terminal"]
categories = ["game-development"]

[dependencies]
snafu = "0.6.10"
derivative = "2.1.1"
logos = "0.11.4"
log = "0.4.11"

[dev-dependencies]
rstest = "0.6.4"