[package]
name = "cheats"
description = "A cheating plugin for bevy."
version = "0.4.0"
homepage = "https://erayerdin.com"
repository = "https://github.com/erayerdin/cheats"
license = "Apache-2.0"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2018"
keywords = [
    "gamedev", "game", "console", "shell",
    "terminal", "bevy", "cheats", "cheat",
    "cheating"
]
categories = ["game-development"]

[dependencies]
bevy = "^0.5.0"
log = "0.4.11"

[dev-dependencies]
# 0.11.0 won't work because `syn` dependency is not
# compatible with bevy
rstest = "0.6.4"
